finished search bar

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,31 +1,55 @@
-.searchContainer {
-	text-align: center;
-}
-
 .searchBar {
-	border-radius: 8px;
-	font-size: 20px;
-	border: 0.5px solid black;
-	padding: 10px;
+	display: flex;
+	align-items: center;
+
+	/* Shadow */
 	box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
 		0 4px 6px -4px rgb(0 0 0 / 0.1);
+
+	/* Borders */
+	border-radius: 20px;
+	border: solid 1px #edeff4;
+
+	/* Padding */
+	padding: 5px 10px;
+
+	/* Width */
+	width: 30%;
 }
 
-.subSection {
-	margin-top: 5rem;
-	margin-left: 2rem;
-	border: 1px solid red;
-}
-.homepageTitle {
-	/* Coloring */
-	color: #005dab;
+.searchBarInput {
+	width: 100%;
 
-	/* Bold */
-	font-weight: 400;
+	/* Border */
+	border: none;
 
-	/* Margins */
-	/* margin-top: 4rem; */
+	/* Outline */
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+
+	/* Fonts */
+	font-size: 14px;
 
 	/* Positioning */
-	text-align: center;
+	padding: 10px;
+
+	/* Color */
+	background-color: transparent;
 }
+
+.searchSection {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+/* .homepageTitle { */
+/* Coloring */
+/* color: #005dab; */
+
+/* Bold */
+/* font-weight: 400; */
+
+/* Positioning */
+/* text-align: center; */
+/* } */
