--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,6 +9,9 @@
 	border-radius: 20px;
 	border: solid 1px #edeff4;
 
+	/* Background */
+	background-color: white;
+
 	/* Padding */
 	padding: 5px 10px;
 
@@ -40,13 +43,21 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+
+	padding-top: 5rem;
 }
 
 .subsections {
+}
+
+.mainBody {
 	background-image: url(../public/greenbackground.png);
 	background-position: center;
-  	background-repeat: no-repeat;
-  	background-size: cover;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	height: 100vh;
+	width: 100vw;
 }
 
 /* .homepageTitle { */
