--- a/styles/pages/CoursePage.module.css
+++ b/styles/pages/CoursePage.module.css
@@ -1,3 +1,48 @@
 .courseBody{
     margin-top: 1rem;
 }
+
+.searchBarInput {
+	/* Shadow */
+	box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.3), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+
+	/* Borders */
+	border-radius: 10px;
+	border: solid 1px #edeff4;
+
+	/* Outline */
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+
+	/* Fonts */
+	font-size: 14px;
+
+	/* Positioning */
+	padding: 10px;
+
+	width: 350px;
+
+	/* Color */
+	background-color: white;
+}
+
+.searchSection {
+    /* Put everything in a row */
+    display: flex;
+    align-items: center;
+	justify-content: center;
+	gap: 20px;
+
+	/* Padding */
+	padding: 0.7rem 0px;
+
+	/* Width */
+	width: 100%;
+
+	background-color: #fff4f4;
+}
+
+.searchSectionTitle{
+	color: #666666;
+	font-weight: 500;
+}
