--- a/styles/components/HomeSubSection.module.css
+++ b/styles/components/HomeSubSection.module.css
@@ -1,7 +1,6 @@
 .subSection {
-	margin-top: 5rem;
 	margin-left: 15rem;
-	padding-left: 5rem;
+	/* padding-left: 5rem; */
 	/* border: 1px solid red; */
 }
 
