--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -48,6 +48,10 @@
 }
 
 .subsections {
+	/* display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center; */
 }
 
 .mainBody {
