--- a/styles/pages/CoursePage.module.css
+++ b/styles/pages/CoursePage.module.css
@@ -125,3 +125,24 @@
 	margin-top: 4rem;
 	column-gap: 5rem;
 }
+
+.reviewHeader{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-left: 5rem;
+}
+
+.reviewTitle{
+	color: #005DAB;
+	font-size: 25px;
+}
+
+.reviewsContainer{
+	margin-top: 3rem;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 1.5rem;
+}
