slight modifications to directory

--- a/styles/pages/course-rate-page/RatingBackground.module.css
+++ b/styles/pages/course-rate-page/RatingBackground.module.css
@@ -1,6 +1,6 @@
 
 .mainBody {
-    background-image: url(../../public/greenbackground.png);
+    background-image: url(../../../public/greenbackground.png);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
