--- a/styles/pages/CoursePage.module.css
+++ b/styles/pages/CoursePage.module.css
@@ -1,5 +1,12 @@
 .courseBody{
     margin-top: 1rem;
+
+	background-image: url(../../public/background-2.png);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	height: 100%;
 }
 
 .searchBarInput {
