--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -55,7 +55,7 @@
 }
 
 .mainBody {
-	background-image: url(../../public/greenbackground.png);
+	background-image: url(../../public/background-2.png);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
