--- a/styles/pages/CoursePage.module.css
+++ b/styles/pages/CoursePage.module.css
@@ -77,6 +77,8 @@
 	
 	/* Shadow */
 	box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.3), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+
+	text-decoration: none;
 }
 
 .courseDesc{
@@ -152,4 +154,9 @@
 	flex-direction: column;
 	align-items: center;
 	row-gap: 1.5rem;
+}
+
+.Link{
+	text-decoration: none;
+	color: black;
 }
